# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_cargo_crate("lib") {
  crate_name = "parking_lot"
  crate_type = "rlib"
  crate_root = "src/lib.rs"

  sources = [ "src/lib.rs" ]
  edition = "2018"
  cargo_pkg_version = "0.12.1"
  cargo_pkg_authors = "Amanieu d'Antras <amanieu@gmail.com>"
  cargo_pkg_name = "third_party_rust_parking_lot"
  cargo_pkg_description = "More compact and efficient implementations of the standard synchronization primitives."
  deps = [
    "//third_party/rust/crates/parking_lot/core:lib",
    "//third_party/rust/crates/parking_lot/lock_api:lib",
  ]
  features = [ "default" ]
}
